--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}TCG Pocket Collection{% endblock %}</title>
+    <title>{% block title %}{{ t('web.title') }}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
     <style>
@@ -146,8 +146,8 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
         <div class="container-fluid">
-            <a class="navbar-brand" href="{{ url_for('index') }}">
-                <i class="bi bi-collection-fill"></i> TCG Pocket Collection
+                <a class="navbar-brand" href="{{ url_for('index') }}">
+                <i class="bi bi-collection-fill"></i> {{ t('web.title') }}
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -156,12 +156,12 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('index') }}">
-                            <i class="bi bi-house-fill"></i> Home
+                            <i class="bi bi-house-fill"></i> {{ t('web.home') }}
                         </a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('stats') }}">
-                            <i class="bi bi-graph-up"></i> Statistiche
+                            <i class="bi bi-graph-up"></i> {{ t('web.statistics') }}
                         </a>
                     </li>
                 </ul>
